--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 .metadata/
 target/
 src/main/webapp/resources/bower_components
-src/main/resources/database.properties
+#src/main/resources/database.properties
 #hibernate.cfg.xml
 Servers
 app/.idea/
